--- a/package.json
+++ b/package.json
@@ -2,5 +2,12 @@
   "name": "clone-facebook",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/core": "^7.5.4",
+    "@babel/preset-env": "^7.5.4",
+    "@babel/preset-react": "^7.0.0",
+    "webpack": "^4.35.3",
+    "webpack-cli": "^3.3.5"
+  }
 }
