--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
     "@babel/preset-react": "^7.0.0",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5"
+  },
+  "dependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   }
 }
